<resources>
    <string name="app_name">tKey</string>
    <string name="mock_key">f1f02ee186749cfe1ef8f957fc3d7a5b7128f979bacc10ab3b2a811d4f990852</string>
    <string name="note_this_is_a_testing_application">Note: This is a testing application. Please use console for debugging.</string>
    <string name="mock_login">Mock login</string>
    <string name="login_and_utilities">Login and utilities</string>
    <string name="create_new_key">Create new key</string>
    <string name="reconstruct_key">Reconstruct key</string>
    <string name="get_key_details">Get key details</string>
    <string name="get_sdk_object">Get SDK object</string>
    <string name="console">Console</string>
    <string name="console_log">console.log</string>
    <string name="login_with_torus">Login with Torus</string>
    <string name="module_service_provider_base">Module service_provider_base</string>
    <string name="play_with_module_service_provider_base">Play with module service_provider_base</string>
    <string name="input">Input</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="key">Key</string>
    <string name="content">Content</string>
    <string name="get_public_key">Get public key</string>
</resources>